--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.16",
+    "mongodb": "^6.1.0",
+    "mongoose": "^7.6.0",
     "next": "13.5.4",
     "postcss": "8.4.31",
     "react": "18.2.0",
